# rebar3_template

./: README.md  app.erl  app.template  eunit.erl  eunit.template  gen_server.erl  gen_server.template  gen_statem.erl  gen_statem.template  globals  hrl.erl  hrl.template  mod.erl  mod.template  rabbit_exchange_type.erl  rabbit_exchange_type.template  redis_module.template  release.erl  release.template  rust.erl  rust.template  rust_nif.erl  rust_nif.template  suite.erl  suite.template  sup.erl  sup.template
app_template/: README.md  rebar.config  rebar.config.script
app_template/config/: test.config
app_template/src/: app_template.app.src  app_template.app.src.script
app_template/test/: Makefile  rebar.config
app_template/test/ct/: app_template_SUITE.erl  app_template_ct.hrl
app_template/test/eunit/: app_template_test.erl
rabbit/rabbit_exchange_type_template/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  tool.sh
rabbit/rabbit_exchange_type_template/src/: rabbit_exchange_type_template.erl
rabbit/rabbitmq_golden_exchange/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  erlang.mk  tool.sh  util.sh
release_template/: .gitignore  .gitlab-ci.yml  Makefile  README.md  rebar.config  rebar.config.script  tool.sh
release_template/config/: sys.config.src  test.config  vm.args.src
release_template/scripts/: util.sh
rust_nif_template/: Cargo.toml  build.rs  build_crates.sh
rust_nif_template/benches/: bench.rs
rust_nif_template/src/: lib.rs  nif.rs  options.rs
rust_nif_template/tests/: rust_nif_test.rs
(+16 files in other folders)
