[package]
name = "{{name}}"
version = "0.1.0"
authors = ["{{author_name}} <{{author_email}}>"]
license = "MIT/Apache-2.0 {{copyright_year}}"
build = "build.rs"

[lib]
name = "{{name}}"
crate-type = ["cdylib","rlib"]

[[bench]]
name = "bench"
harness = false

[dependencies]
rustler = "0.22.0-rc.0"
serde = { version = "1.0", features = ["derive"] }
bencher = "0.1.5"
